Debug frigging Jekyll weirdness on github.. o god

--- a/_posts/2016-09-21-phi-devcon2.md
+++ b/_posts/2016-09-21-phi-devcon2.md
@@ -1,6 +1,6 @@
 ---
 layout: blog-post-video
-blog-format-2: true
+blog-format-video: true
 title: "PHI at Devcon2 - decentralized commercial banking and stable currency"
 day: 14
 month: Sep
