--- a/_posts/2016-09-21-phi-devcon2.md
+++ b/_posts/2016-09-21-phi-devcon2.md
@@ -1,5 +1,9 @@
 ---
 layout: blog-post-video
+projects-link: "#section-work"
+team-link: "#section-team"
+investors-link: "#section-investors"
+contact-link: "#section-contact"
 blog-format-video: true
 title: "PHI at Devcon2 - decentralized commercial banking and stable currency"
 day: 14
