--- a/_posts/2016-10-22-eth-event.md
+++ b/_posts/2016-10-22-eth-event.md
@@ -1,30 +1,28 @@
 ---
-layout: blog-post-simple
+layout: blog-post-video
 projects-link: "#section-work"
 team-link: "#section-team"
 investors-link: "#section-investors"
 contact-link: "#section-contact"
-blog-format-simple: true
+blog-format-video: true
 title: "Proof of Stake Panel - Ethereum Event@VISA HQ"
 day: 22
 month: Oct
 author: Tom Ding
+author-bio: Tom is CEO of String Labs.
 author-link: https://twitter.com/tom_ding
-author-bio: Tom is CEO of String Labs
-tags: blockchain event,panel,consensus
-youtube: https://www.youtube.com/embed/xf1dql4Zoqw
+tags: blockchain event,panel,consensus,proofofstake
+youtube: https://www.youtube.com/embed/h2pONw0eTTk
 ---
 
 Ethereum Silicon Valley organized an awesome half day event at VISA headquarter in
 Foster City, with excellent talks including Ethereum Mauve paper, Filecoin, State of SNARK
 and etc.
 
-Our very own Dominic Williams was invited as a panelist on Proof-of-Stake, along with
+Our own Dominic Williams was invited as a panelist on Proof-of-Stake, along with
 Vitalik, Vlad Zamfir and Jae Kwon, moderated by Martin Koppelman of Gnosis.
 
-For those impatient, jump to 13:52 for some of Dominic's core thinking on scalable blockchain:
-    "I believe that it will be proven with theoratical computer science, that in no way it
-will be possible to create an infinitely scalable virtual machine without such (incorruptible)
-    source of randomness" - Dominic
+For those impatient, you might want to check out 13:52 for some of Dominic's core thinking on scalable blockchain:
 
-    See [http://string.technology/](http://string.technology/)
+    "I believe that it will be proven with theoratical computer science, that in no way it will be possible to create an infinitely scalable virtual machine without such (incorruptible) source of randomness." - Dominic
+
