renamed the pos panel post link

--- a/_posts/2016-10-22-pos-panel.md
+++ b/_posts/2016-10-22-pos-panel.md
@@ -11,13 +11,13 @@ month: Oct
 author: Tom Ding
 author-bio: Tom is CEO of String Labs.
 author-link: https://twitter.com/tom_ding
-tags: blockchain event,panel,consensus,proofofstake
+tags: panel,proof-of-stake, DFINITY
 youtube: https://www.youtube.com/embed/h2pONw0eTTk
 ---
 
 Ethereum Silicon Valley organized an awesome half day event at VISA headquarter in
 Foster City, with excellent talks including Ethereum Mauve paper, Filecoin, State of SNARK
-and etc.
+and Proof of Stake.
 
 Our own Dominic Williams was invited as a panelist on Proof-of-Stake, along with
 Vitalik, Vlad Zamfir and Jae Kwon, moderated by Martin Koppelman of Gnosis.
