Use Upper Case for Image Files

--- a/_posts/2017-01-10-guiyang.en.md
+++ b/_posts/2017-01-10-guiyang.en.md
@@ -14,7 +14,7 @@ author-bio: Tomomi is a project coordinator at String Labs
 tags: DFINITY, decentralized cloud, blockchain
 imagesFolder: archive/guiyangvisit
 imagesType: jpg
-slides: IMG_0949.jpg,IMG_0948.jpg,IMG_0924.jpg,IMG_0952.jpg
+slides: IMG_0949.JPG,IMG_0948.JPG,IMG_0924.JPG,IMG_0952.JPG
 ---
 
 The blockchain industry have gained significant interest globally in 2016, especially in China. The City of Guiyang, China, is one of the most forward thinking cities that has listed blockchain as their top strategic priority backed by a number of major initiatives, including launching a 500M RMB blockchain fund, hosting global Blockchain startup contests, and launching a blockchain based financial product exchange.
