--- a/_i18n/en/2016-09-21-phi-devcon2.md
+++ b/_i18n/en/2016-09-21-phi-devcon2.md
@@ -2,7 +2,7 @@
 layout: blog-post-video
 projects-link: "#section-work"
 team-link: "#section-team"
-investors-link: "#section-investors"
+investment-link: "#section-investment"
 contact-link: "#section-contact"
 blog-format-video: true
 title: "PHI at Devcon2 - decentralized commercial banking and stable currency"
@@ -22,4 +22,4 @@ day commercial banks may be replaced by autonomous decentralized systems.
 
 No special technical knowledge is required to understand this content, other than an awareness of how autonomous systems can run on trusted computing networks such as Ethereum or DFINITY.
 
-More in-depth materials will be provided soon. 
+More in-depth materials will be provided soon.
