--- a/_i18n/en/2016-10-22-pos-panel.md
+++ b/_i18n/en/2016-10-22-pos-panel.md
@@ -2,7 +2,7 @@
 layout: blog-post-video
 projects-link: "#section-work"
 team-link: "#section-team"
-investors-link: "#section-investors"
+investment-link: "#section-investment"
 contact-link: "#section-contact"
 blog-format-video: true
 title: "Proof of Stake Panel - Ethereum Event@VISA HQ"
