--- a/_posts/2017-01-10-guiyang.en.md
+++ b/_posts/2017-01-10-guiyang.en.md
@@ -2,7 +2,7 @@
 layout: blog-post-slides
 projects-link: "#section-work"
 team-link: "#section-team"
-investors-link: "#section-investors"
+investment-link: "#section-investment"
 contact-link: "#section-contact"
 blog-format-slides: true
 title: "2017 Is Off to an Exciting Start!"
@@ -21,6 +21,6 @@ The blockchain industry have gained significant interest globally in 2016, espec
 
 On Jan 8th 2017, the delegation of Guiyang City - including its deputy mayor Mr. Yuxiang Wang, head of investment, and the city’s top financial and technology entrepreneurs, visited Silicon Valley for a Blockchain industry trip, and String Labs was honored to have been selected as one of the three companies for them to visit. The delegation also attended the Blockchain Fintech Summit of Silicon Valley, where our CEO, Tom, was invited to give a keynote on DFINITY project,The Decentralized Cloud.
 
-We are also excited to announce that DFINITY project website (http://dfinity.network) is live!  
+We are also excited to announce that DFINITY project website (http://dfinity.network) is live!
 
 Stay tuned for more exciting news...
